# otus-cpp-hw1

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  test_version.cpp
